# scorion

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Resources/: LICENSES.md
Resources/factory/: features.json  premium_bank_manifest.json
Resources/factory/presets/: 808_soft_sub.json  abandoned_station.json  acid_line.json  afro_pop_sparkle.json  after_hours_keys.json  afterlife_hum.json  ah_pad_wide.json  air_riser_fx.json  al_green_soft.json  analog_drift_pad.json  ash_texture.json  aurora_scape.json  battle_pulse.json  black_chrome.json  black_horizon.json  black_mass_lead.json  blade_runner_bass.json  blood_neon.json  blood_reese.json  boom_bap_keys.json  breath_texture.json  chart_topper_lead.json  chopped_soul.json  church_soft.json  cinematic_whoosh_pad.json  city_lights_pad.json  cloud_choir.json  club_808_tone.json  crimson_grid.json  crypt_lead.json  crypt_wind.json  crystal_bell.json  crystal_grand.json  deep_orbit_bass.json  deep_orbit_dark.json  deep_orbit_scape.json  digital_knife.json  drill_atmosphere.json  dungeon_808.json  dusty_ep.json  (+108 more)
Resources/factory/wavetables/: analog_warm.wtbin  choir_ah.wtbin  digital_harsh.wtbin  formant_vox.wtbin  glass_pad.wtbin  harmonic_evolve.wtbin  manifest.json  metallic.wtbin  noise_bitcrush.wtbin  ooh_vox.wtbin  square_morph.wtbin  talk_box.wtbin  vocal_pad.wtbin
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/assets/: AssetLoader.cpp  AssetLoader.h  ResourcePaths.cpp  ResourcePaths.h
Source/audio/: AudioEngine.cpp  AudioEngine.h  ParamBridge.cpp  ParamBridge.h  PerformanceMode.h  SpscQueue.cpp  SpscQueue.h  VoiceManager.cpp  VoiceManager.h
Source/dsp/: AdsrEnvelope.cpp  AdsrEnvelope.h  Oversampler2x.h  PolyBlepOscillator.cpp  PolyBlepOscillator.h  Smoother.cpp  Smoother.h  ZdfFilter.cpp  ZdfFilter.h
Source/fx/: Effects.cpp  Effects.h  FxRack.cpp  FxRack.h
Source/midi/: MpeHandler.cpp  MpeHandler.h
Source/modulation/: Lfo.cpp  Lfo.h  MidiLearn.cpp  MidiLearn.h  ModulationMatrix.cpp  ModulationMatrix.h
Source/presets/: PresetManager.cpp  PresetManager.h
Source/synth/: FmEngine.cpp  FmEngine.h  GranularEngine.cpp  GranularEngine.h  ISynthEngine.cpp  ISynthEngine.h  SamplerEngine.cpp  SamplerEngine.h  VirtualAnalogEngine.cpp  VirtualAnalogEngine.h  WavetableEngine.cpp  WavetableEngine.h
Source/ui/: AdsrEditor.h  AnimatedBackdrop.h  ContentBrowser.h  FeatureMatrix.h  HubNav.h  InspectorSection.h  LevelMeter.h  LfoPanel.h  MacroCard.h  Motion.h  PianoBar.h  PortalStage.h  PresetCardGrid.h  ScopeDisplay.h  ScorionLookAndFeel.cpp  ScorionLookAndFeel.h  SectionPanel.h  SettingsPanel.h  SoundLibrary.h  Spectrogram.h  VoiceMeter.h  WaveformProbe.cpp  WaveformProbe.h  WavetablePad.h
Tests/: main.cpp  test_adsr.cpp  test_modulation.cpp  test_offline_voice.cpp  test_polyblep.cpp  test_preset.cpp  test_smoother.cpp  test_spsc_queue.cpp  test_wavetable_bin.cpp
design-system/scorion/: MASTER.md
docs/: ENGINEERING_SPEC.md  PROGRESS.md  RELEASE_CHECKLIST.md
docs/VISUAL_QA/: README.md
installer/windows/: README.md  ScorionSetup.iss  install_fl_studio.bat  pack_dist.ps1
scripts/: enrich_library.py  gen_dark_bank.py  gen_wavetables.py  smoke.sh
